--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
-    "sequelize": "^6.5.1"
+    "sequelize": "^6.5.1",
+    "socket.io": "^2.4.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.2.0"
