--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "node-ipc": "^9.1.4",
     "vue": "^2.6.12",
+    "vue-circular-count-down-timer": "^1.0.4",
     "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -46,9 +51,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "_id": "client@1.0.0",
-  "keywords": [],
-  "license": "ISC",
-  "readme": "ERROR: No README data found!"
+  ]
 }
