--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "node-ipc": "^9.1.4",
     "vue": "^2.6.12",
     "vue-circular-count-down-timer": "^1.0.4",
+    "vue-initials-img": "^1.0.4",
     "vue-router": "^3.5.1",
     "vue-socket.io": "^3.0.10",
     "vuex": "^3.6.2"
